--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ $ git checkout gh-pages
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <div>test</div>
   </body>
+
 </html>
