--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 title: Home
 ---
 
-<h2>Welcome</h2>
+<div class="home">
+  <h1>Beerend Lauwers</h1>
+  <p>Trailblazing Haskell development on Windows, among other things</p>
+</div>
+<div id="posts">
+  <h2>Recent posts</h2>
+  $partial("templates/post-list.html")$
+  <a href="/archive.html">View archive</a>
+</div>
 
-<img src="/images/haskell-logo.png" style="float: right; margin: 10px;" />
+<div id="web-accounts">
+  <p>You can find me here as well:</p>
+  <a href="http://github.com/beerendlauwers"><i class="fa fa-github fa-5x" title="Github"></i></a>
+  <a href="https://be.linkedin.com/in/beerendlauwers"><i class="fa fa-linkedin-square fa-5x" title="LinkedIn"></i></a>
+</div>
 
-<p>Welcome to my blog!</p>
-
-<p>I've reproduced a list of recent posts here for your reading pleasure:</p>
-
-<h2>Posts</h2>
-$partial("templates/post-list.html")$
-
-<p>…or you can find more in the <a href="/archive.html">archives</a>.</p>
+<div id="contact">
+  <h2>Contact</h2>
+  <ul>
+    <li>Email: beerendlauwers@gmail.com</li>
+  </ul>
+</div>
