--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ title: Home
   <p>You can find me here as well:</p>
   <a href="http://github.com/beerendlauwers"><i class="fa fa-github fa-5x" title="Github"></i></a>
   <a href="https://be.linkedin.com/in/beerendlauwers"><i class="fa fa-linkedin-square fa-5x" title="LinkedIn"></i></a>
+  <a href="http://stackoverflow.com/users/4737779/beerend-lauwers"><i class="fa fa-stack-overflow fa-5x" title="StackOverflow"></i></a>
 </div>
 
 <div id="contact">
