Added functionality to publish project ideas.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@ title: Home
   <a href="/archive.html">View archive</a>
 </div>
 
+<div id="project-ideas">
+  <h2>Project ideas</h2>
+  <p><a href="/project-ideas.html">I keep a list of ideas for projects related to Haskell development.</a>
+     You are free to peruse this list and take inspiration from it (or use it outright, it's public domain content).
+  </p>
+
 <div id="web-accounts">
+  <h2>On the web</h2>
   <p>You can find me here as well:</p>
   <a href="http://github.com/beerendlauwers"><i class="fa fa-github fa-5x" title="Github"></i></a>
   <a href="https://be.linkedin.com/in/beerendlauwers"><i class="fa fa-linkedin-square fa-5x" title="LinkedIn"></i></a>
