Changed the theme.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 
 <div class="home">
   <h1>Beerend Lauwers</h1>
-  <p>Trailblazing Haskell development on Windows, among other things</p>
+  <p style="text-align:center;">Trailblazing Haskell development on Windows, among other things</p>
 </div>
 <div id="posts">
   <h2>Recent posts</h2>
